# clique-partitioning

./: CMakeLists.txt  python_example.py  readme.md
cmake/modules/: FindGUROBI.cmake
data/: example-from-paper.txt
data/Modularity/: Readme.md  adjnoun.txt  dolphins.txt  football.txt  karate.txt  lesmis.txt  polbooks.txt
include/: callback.hxx  clique-partitioning-bnc.hxx  kernighan-lin.hxx  load.hxx  property-maps.hxx  rounding.hxx  time.hxx
include/andres/: partition.hxx
include/inequalities/: chvatal-gomory.hxx  complete.hxx  constants.hxx  half-chorded-odd-cycle.hxx  hypermetric.hxx  inequality.hxx  odd-bicycle-wheel.hxx  odd-wheel.hxx  separator.hxx  triangle.hxx  two-partition.hxx
include/inequalities/complete/: cp_facets_4.txt  cp_facets_5.txt
src/: main.cxx  python-interface.cxx
src/unit-tests/: callback.cxx  clique-partitioning-bnc.cxx  load.cxx  property-maps.cxx
src/unit-tests/inequalities/: chvatal-gomory.cxx  clique-web.cxx  complete.cxx  half-chorded-odd-cycle.cxx  hypermetric.cxx  inequality.cxx  odd-wheel.cxx  separator.cxx  two-partition.cxx
